--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "react-scripts": "3.4.1",
         "react-transition-group": "^4.4.1",
         "serve": "^11.3.0",
+        "server": "^1.0.27",
         "stylus": "^0.54.7"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "dev": "react-scripts start",
+        "start": "serve --single ./build",
         "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
         "build": "react-scripts build",
         "test": "react-scripts test",
